import "google/protobuf/descriptor.proto";

message GobyExtend
{
    // currently a dummy message so i can get FileDescriptorProto
}

extend .google.protobuf.FieldOptions
{       
    optional double dccl_max = 5000;
    optional double dccl_min = 5001;
    optional string description = 5002;
    // optional string cli_short = 5003;
}

